# plingo

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Makefile  README.md  README_short.md  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yaml
docs/: api.md
src/: generate_doc.py  main.py
src/plingo/: __init__.py  cli.py  interpreter.py
tests/: test_000_noop.py  test_003_invert.py  test_004_invert_plus_plus.py  test_008_invert_channel.py  test_009_copy_plus_plus.py  test_013_switch_plus_plus.py  test_015_switch_minus_plus.py  test_017_fade.py  test_018_add_plus_plus.py  test_019_add_plus_minus.py  test_022_sub_plus_plus.py  test_plingo.py
