[metadata]
name = Plingo
# Version needs regex in setup.py.
url = https://github.com/fezde/plingo
project_urls =
    Documentation = https://github.com/fezde/plingo
    Code = https://github.com/fezde/plingo
    Issue tracker = https://github.com/fezde/plingo/issues
license = MIT
author = Felix Kratzer
author_email = fez.de.de@gmail.com
maintainer = FEZ
maintainer_email =  fez.de.de@gmail.com
description = A visual programming language for pixel based image manipulation.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Intended Audience :: Education
    Intended Audience :: Developers
    Intended Audience :: Other Audience
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Artistic Software
    Topic :: Scientific/Engineering :: Image Processing

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.7

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    flask = plingo.cli:main

[tool:pytest]
testpaths = tests
filterwarnings =
    error

[coverage:run]
branch = True
source =
    plingo
    tests
